--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "jquery": "^3.5.0",
     "lodash": "^4.17.15",
     "lodash.debounce": "^4.0.8",
     "vue": "^2.6.11",
